<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/app_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteY="102dp">


        <EditText
            android:id="@+id/number1"
            android:layout_width="88dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/app_hint_text_1"
            android:inputType="number"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_input_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/number2"
            android:layout_width="88dp"
            android:layout_height="46dp"
            android:layout_marginStart="20dp"
            android:ems="10"
            android:hint="@string/app_hint_text_2"
            android:inputType="number"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorText"
            android:textSize="@dimen/app_input_text_size"
            app:layout_constraintStart_toEndOf="@+id/number1"

            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorBackground"
            android:text="@string/app_button_text_plus"
            android:textColor="@color/colorButton"
            android:textSize="@dimen/app_button_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/number1"

            />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBackground"
            android:text="@string/app_button_text_minus"
            android:textColor="@color/colorButton"
            android:textSize="@dimen/app_button_text_size"
            app:layout_constraintStart_toEndOf="@+id/plusButton"
            app:layout_constraintTop_toBottomOf="@id/number2" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorBackground"
            android:text="@string/app_button_text_multiply"
            android:textColor="@color/colorButton"
            android:textSize="@dimen/app_button_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/plusButton" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorBackground"
            android:text="@string/app_button_text_divide"
            android:textColor="@color/colorButton"
            android:textSize="@dimen/app_button_text_size"
            app:layout_constraintStart_toEndOf="@id/multiplyButton"
            app:layout_constraintTop_toBottomOf="@id/minusButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>